--- a/src/components/ProductCart/ProductCard.module.css
+++ b/src/components/ProductCart/ProductCard.module.css
@@ -14,19 +14,19 @@
   box-shadow: 0 0.5rem 1.25rem rgba(0, 0, 0, 0.15);
 }
 
-.card-image {
+.cardImage {
   width: 100%;
   object-fit: cover;
   border-radius: 1.25rem;
 }
 
-.card-info {
+.cardInfo {
   padding: 0.625rem 1.875rem 1.25rem;
   display: grid;
   grid-template-columns: 1fr 1fr;
 }
 
-.card-name {
+.cardName {
   margin: 0;
   padding-bottom: 0.625rem;
   text-align: center;
@@ -36,17 +36,17 @@
   grid-column: 1 / -1;
 }
 
-.card-price {
+.cardPrice {
   font-size: 1.625rem;
   font-weight: bold;
   color: #1a701e;
 }
 
-.card-rating__svg {
-  width: 1rem;
-  fill: #1a701e;
+.cardRatingIcon {
+  font-size: 1.375rem;
 }
-.card-rating {
+
+.cardRating {
   font-size: 1.375rem;
   color: #f9a825;
   display: inline-flex;
@@ -54,18 +54,14 @@
   gap: 0.25rem;
 }
 
-.card-rating__icon {
-  font-size: 1.375rem;
-}
-
-.card-price,
-.card-rating {
+.cardPrice,
+.cardRating {
   margin: 0;
   align-self: left;
   padding: 1rem;
 }
 
-.card-amount {
+.cardAmount {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -75,24 +71,24 @@
   border-radius: 0.9375rem;
 }
 
-.card-details {
+.cardDetails {
   flex-grow: 1;
   display: flex;
   flex-direction: column;
   gap: 0.3125rem;
 }
 
-.card-amount__buttons {
+.cardButtons {
   display: grid;
   row-gap: 0.5rem;
 }
 
-.card-amount__text {
+.cardAmountText {
   color: #333333;
   font-weight: 600;
 }
 
-.card-amount__button {
+.cardButton {
   padding: 0.375rem 0.75rem;
   font-size: 1rem;
   font-weight: bold;
@@ -104,6 +100,6 @@
   transition: background-color 0.2s ease;
 }
 
-.card-amount__button:hover {
+.cardButton:hover {
   background-color: #1565c0;
 }
