--- a/src/components/ProductFilter/ProductFilter.module.css
+++ b/src/components/ProductFilter/ProductFilter.module.css
@@ -1,11 +1,10 @@
 .filterButton {
   font-family: monospace;
-  /* margin: 0.5rem 1rem; */
   padding: 0.5rem 1rem;
   background-color: #d5e0ff;
   color: #000;
   border: none;
-  border-radius: 4px;
+  border-radius: 0.25rem;
   cursor: pointer;
   transition: background-color 0.2s ease;
   font-size: 1rem;
